--- a/lab1.html
+++ b/lab1.html
@@ -26,35 +26,35 @@
 </div>
 <div class ="country-list">
     <div class ="country">
-        <img src="us.png" alt="America Flag">
+        <img src="images/us.png" alt="America Flag">
         <p>United States of America</p>
         <p>Currency: United States of America</p>
         <p>Regions: Alabama, Alaska, Arizona, Arkansas, California, Colorado, Connecticut, Delaware, Florida, Georgia, Hawaii, Idaho, Illinois, Indiana, Iowa, Kansas, Kentucky, Louisiana, Maine, Maryland, Massachusetts, Michigan, Minnesota, Mississippi, Missouri, Montana, Nebraska, Nevada, New Hampshire, New Jersey, New Mexico, New York, North Carolina, North Dakota, Ohio, Oklahoma, Oregon, Pennsylvania, Rhode Island, South Carolina, South Dakota, Tennessee, Texas, Utah, Vermont, Virginia, Washington, West Virginia, Wisconsin, Wyoming</p>
         <a href="https://en.wikipedia.org/wiki/United_States" target="_blank">https://en.wikipedia.org/wiki/United_States</a>
     </div>
     <div class="country">
-        <img src="cn.png" alt="China Flag">
+        <img src="images/cn.png" alt="China Flag">
             <p>People's Republic of China</p>
             <p>Currency: Chinese Yuan (CNY)</p>
             <p>Region: Anhui, Fujian, Gansu, Guangdong, Guizhou, Hainan, Hebei, Heilongjiang, Henan, Hubei, Hunan, Jiangsu, Jiangxi, Jilin, Liaoning, Qinghai, Shaanxi, Shandong, Shanxi, Sichuan, Yunnan, Zhejiang, Beijing, Chongqing, Guangxi, Hongkong, Inner Mongolia, Macau, Ningxia, Shanghai, Tianjin, Xinjiang</p>
             <a href="https://en.wikipedia.org/wiki/China" target="_blank">https://en.wikipedia.org/wiki/China</a>
     </div>
     <div class="country">
-        <img src="ca.png" alt="Canada Flag">
+        <img src="images/ca.png" alt="Canada Flag">
         <h2>Canada</h2>
         <p>Currency: Canadian Dollar (CAD)</p>
         <p>Region: Alberta, British Columbia, Manitoba, New Brunswick, Newfoundland and Labrador, Nova Scotia, Ontario, Prince Edward Island, Quebec, and Saskatchewan</p>
         <a href="https://en.wikipedia.org/wiki/Canada" target="_blank">https://en.wikipedia.org/wiki/Canada</a>
     </div>
     <div class="country">
-        <img src="in.png" alt="India Flag">
+        <img src="images/in.png" alt="India Flag">
         <h2>India</h2>
         <p>Currency:Currency: Indian Rupee (INR)</p>
         <p>Region: Andhra Pradesh, Arunachal Pradesh, Assam, Bihar, Chhattisgarh, Goa, Gujarat, Haryana, Himachal Pradesh, Jharkhand, Karnataka, Kerala, Madhya Pradesh, Maharashtra, Manipur, Meghalaya, Mizoram, Nagaland, Odisha, Punja, Rajasthan, Sikkim, Tamil Nadu, Telangana, Tripura, Uttarakhand, Uttar Pradesh, West Bengal</p>
         <a href="https://en.wikipedia.org/wiki/India" target="_blank">https://en.wikipedia.org/wiki/India</a>
     </div>
     <div class="country">
-        <img src="jp.png" alt="Japan Flag">
+        <img src="images/jp.png" alt="Japan Flag">
         <h2>Japan</h2>
         <p>Currency: Japanese Yen (JPY)</p>
         <p>Region: Hokkaido, Tohoku, Kanto, Chubu, Kinki, Chugoku, Shikoku, and Kyushu-Okinawa</p>
