--- a/lab1.html
+++ b/lab1.html
@@ -60,6 +60,13 @@
         <p>Region: Hokkaido, Tohoku, Kanto, Chubu, Kinki, Chugoku, Shikoku, and Kyushu-Okinawa</p>
         <a href="https://en.wikipedia.org/wiki/Japan" target="_blank">https://en.wikipedia.org/wiki/Japan</a>
     </div>
+    <div class="country">
+        <img src="images/fr.png" alt="French Flag">
+        <h2>French</h2>
+        <p>Currency: Japanese Yen (JPY)</p>
+        <p>Region: Hokkaido, Tohoku, Kanto, Chubu, Kinki, Chugoku, Shikoku, and Kyushu-Okinawa</p>
+        <a href="https://en.wikipedia.org/wiki/Japan" target="_blank">https://en.wikipedia.org/wiki/Japan</a>
+    </div>
 </div>
 <!-- Embedded JavaScript go here -->
 </body>
