--- a/lab1.html
+++ b/lab1.html
@@ -12,18 +12,15 @@
 <!-- Place your content here -->
 <h1>SE 3316 Lab 1</h1>
 <p>Hello World!</p>
-<div class="search-container">
-    <div>
-        <label for="nameSearch">Search by Name:</label>
-        <input type="text" id="nameSearch" placeholder="Enter country name" maxlength="20">
-        <button id="nameSearchBtn">Search</button>
-    </div>
-    <div>
-        <label for="currencySearch">Search by Currency Code:</label>
-        <input type="text" id="currencySearch" placeholder="Enter currency code" maxlength="3" oninput="convertToUppercase(this)">
-        <!-- <input type="text" id="currencySearch" placeholder="Enter currency code"> -->
-        <button id="currencySearchBtn">Search</button>
-    </div>
+<div>
+    <label for="nameSearch">Search by Name:</label>
+    <input type="text" id="nameSearch" placeholder="Enter country name" maxlength="20">
+    <button id="nameSearchBtn">Search</button>
+</div>
+<div>
+    <label for="currencySearch">Search by Currency Code:</label>
+    <input type="text" id="currencySearch" placeholder="Enter currency code" maxlength="3" oninput="convertToUppercase(this)">
+    <button id="currencySearchBtn">Search</button>
 </div>
 <div class ="country-list">
     <div class ="country">
@@ -66,7 +63,77 @@
         <h2>France</h2>
         <p>Currency: Euro (EUR)</p>
         <p>Region: Île-de-France, Berry, Orléanais, Normandy, Languedoc, Lyonnais, Dauphiné, Champagne, Aunis, Saintonge, Poitou, Guyenne and Gascony, Burgundy, Picardy, Anjou, Provence, Angoumois, Bourbonnais, Marche, Brittany, Maine, Touraine, Limousin, Foix, Auvergne, Béarn, Alsace, Artois, Roussillon, Flanders and Hainaut, Franche-Comté, Lorraine and Barrois, Trois-Évêchés, Metz, Toul and Verdun, Corsica, Nivernais</p>
-        <a href="https://en.wikipedia.org/wiki/France" target="_blank">https://en.wikipedia.org/wiki/France/a>
+        <a href="https://en.wikipedia.org/wiki/France" target="_blank">https://en.wikipedia.org/wiki/France</a>
+    </div>
+    <div class="country">
+        <img src="images/de.png" alt="Germany Flag">
+        <h2>Germany</h2>
+        <p>Currency: Euro (EUR)</p>
+        <p>Region: Baden-Württemberg, Bavaria (Bayern), Berlin, Brandenburg, Bremen, Hamburg, Hesse (Hessen), Lower Saxony (Niedersachsen), Mecklenburg-Vorpommern, North Rhine-Westphalia (Nordrhein-Westfalen), Rhineland-Palatinate (Rheinland-Pfalz), Saarland, Saxony (Sachsen), Saxony-Anhalt (Sachsen-Anhalt), Schleswig-Holstein, Thuringia (Thüringen)</p>
+        <a href="https://en.wikipedia.org/wiki/Germany" target="_blank">https://en.wikipedia.org/wiki/Germany</a>
+    </div>
+    <div class="country">
+        <img src="images/it.png" alt="Italy Flag">
+        <h2>Italy</h2>
+        <p>Currency: Euro (EUR)</p>
+        <p>Region: bruzzo, Aosta Valley (Valle d'Aosta), Apulia (Puglia), Basilicata, Calabria, Campania, Emilia-Romagna, Friuli-Venezia Giulia, Lazio, Liguria, Lombardy (Lombardia), Marche, Molise, Piedmont(Piemonte), Sardinia (Sardegna), Sicily (Sicilia), Trentino-Alto Adige/South Tyrol (Trentino-Alto Adige/Südtirol), Tuscany (Toscana), Umbria, Veneto</p>
+        <a href="https://en.wikipedia.org/wiki/Italy" target="_blank">https://en.wikipedia.org/wiki/Italy</a>
+    </div>
+    <div class="country">
+        <img src="images/es.png" alt="Spain Flag">
+        <h2>Spain</h2>
+        <p>Currency: Euro (EUR)</p>
+        <p>Region: Andalusia (Andalucía), Aragon (Aragón), Asturias (Principality of Asturias or Principado de Asturias), Balearic Islands (Islas Baleares), Basque Country (Euskadi or País Vasco), Canary Islands (Islas Canarias), Cantabria, Castile and León (Castilla y León), Castilla-La Mancha, Catalonia (Catalunya or Cataluña), Extremadura, Galicia (Galicia or Galiza), La Rioja, Madrid (Community of Madrid or Comunidad de Madrid), Murcia (Region of Murcia or Región de Murcia), Navarre (Navarra or Nafarroa), Valencian Community</p>
+        <a href="https://en.wikipedia.org/wiki/Spain" target="_blank">https://en.wikipedia.org/wiki/Spain</a>
+    </div>
+    <div class="country">
+        <img src="images/pt.png" alt="Portugal Flag">
+        <h2>Portugal</h2>
+        <p>Currency: Euro (EUR)</p>
+        <p>Region: Aveiro, Beja, Braga, Bragança, Castelo Branco, Coimbra, Évora, Faro, Guarda, Leiria, Lisbon (Lisboa),Portalegre, Porto, Santarém, Setúbal, Viana do Castelo, Vila Real, Viseu, Azores (Açores), Madeira</p>
+        <a href="https://en.wikipedia.org/wiki/Portugal" target="_blank">https://en.wikipedia.org/wiki/Portugal</a>
+    </div>
+    <div class="country">
+        <img src="images/fi.png" alt="Finland Flag">
+        <h2>Finland</h2>
+        <p>Currency: Euro (EUR)</p>
+        <p>Region: Åland Islands (Ahvenanmaan maakunta), Central Finland (Keski-Suomi), Central Ostrobothnia (Keski-Pohjanmaa), Kainuu, Kymenlaakso, Lapland (Lappi), North Karelia (Pohjois-Karjala), Northern Ostrobothnia (Pohjois-Pohjanmaa), Northern Savonia (Pohjois-Savo), Ostrobothnia (Pohjanmaa), Paijat-Hame (Päijät-Häme), Pirkanmaa, Satakunta, South Karelia (Etelä-Karjala), Southern Ostrobothnia (Etelä-Pohjanmaa), Southern Savonia (Etelä-Savo), Uusimaa, Varsinais-Suomi, Kanta-Häme</p>
+        <a href="https://en.wikipedia.org/wiki/Finland" target="_blank">https://en.wikipedia.org/wiki/Finland</a>
+    </div>
+    <div class="country">
+        <img src="images/ie.png" alt="Ireland Flag">
+        <h2>Ireland</h2>
+        <p>Currency: Euro (EUR)</p>
+        <p>Region: Carlow, Cavan, Clare, Cork, Donegal, Dublin, Galway, Kerry, Kildare, Kilkenny, Laois, Leitrim, Limerick, Longford, Louth, Mayo, Meath, Monaghan, Offaly, Roscommon, Sligo, Tipperary, Waterford, Westmeath, Wexford, Wicklow, Fingal (part of County Dublin), South Dublin (part of County Dublin), Dún Laoghaire-Rathdown (part of County Dublin), Cork City, Galway City, Limerick City and County</p>
+        <a href="https://en.wikipedia.org/wiki/Ireland" target="_blank">https://en.wikipedia.org/wiki/Ireland</a>
+    </div>
+    <div class="country">
+        <img src="images/vn.png" alt="Vietnam Flag">
+        <h2>Vietnam</h2>
+        <p>Currency: Vietnamese Dong (VND)</p>
+        <p>Region: Hanoi, Ho Chi Minh City, Hai Phong, Can Tho, Da Nang, An Giang, Bac Giang, Bac Kan, Bac Lieu, Bac Ninh, Ba Ria-Vung Tau, Ben Tre, Binh Dinh, Binh Duong, Binh Phuoc, Binh Thuan, Ca Mau, Cao Bang, Dak Lak, Dak Nong, Dien Bien, Dong Nai, Dong Thap, Gia Lai, Ha Giang, Ha Nam, Ha Tinh, Hai Duong, Hau Giang, Hoa Binh, Hung Yen, Khanh Hoa, Kien Giang, Kon Tum, Lai Chau, Lam Dong, Lang Son, Lao Cai, Long An, Nam Dinh, Nghe An, Ninh Binh, Ninh Thuan, Phu Tho, Phu Yen, Quang Binh, Quang Nam, Quang Ngai, Quang Ninh, Quang Tri, Soc Trang, Son La, Tay Ninh, Thai Binh, Thai Nguyen, Thanh Hoa, Thua Thien-Hue, Tien Giang, Tra Vinh, Tuyen Quang, Vinh Long, Vinh Phuc, Yen Bai</p>
+        <a href="https://en.wikipedia.org/wiki/Vietnam" target="_blank">https://en.wikipedia.org/wiki/Vietnam</a>
+    </div>
+    <div class="country">
+        <img src="images/ch.png" alt="Switzerland Flag">
+        <h2>Switzerland</h2>
+        <p>Currency: Swiss Franc (CHF)</p>
+        <p>Region: Zurich, Bern, Lucerne, Uri, Schwyz, Obwalden, Nidwalden, Glarus, Zug, Fribourg, Solothurn, Basel-Stadt, Basel-Landschaft, Schaffhausen, Appenzell Ausserrhoden, Appenzell Innerrhoden, St. Gallen, Graubünden, Aargau, Thurgau, Ticino, Vaud, Valais, Neuchâtel, Geneva, Jura</p>
+        <a href="https://en.wikipedia.org/wiki/Switzerland" target="_blank">https://en.wikipedia.org/wiki/Switzerland</a>
+    </div>
+    <div class="country">
+        <img src="images/au.png" alt="Australia Flag">
+        <h2>Australia</h2>
+        <p>Currency: Australian Dollar (AUD)</p>
+        <p>Region: New South Wales, Victoria, Queensland, South Australia, Western Australia, Tasmania, Australian Capital Territory (ACT), Northern Territory</p>
+        <a href="https://en.wikipedia.org/wiki/Australia" target="_blank">https://en.wikipedia.org/wiki/Australia</a>
+    </div>
+    <div class="country">
+        <img src="images/gb.png" alt="United Kingdom Flag">
+        <h2>United Kingdom</h2>
+        <p>Currency: British Pound ( GBP)</p>
+        <p>Region: England, Scotland, Wales, Northern Ireland</p>
+        <a href="https://en.wikipedia.org/wiki/Great_Britain" target="_blank">https://en.wikipedia.org/wiki/Great_Britain</a>
     </div>
 </div>
 <!-- Embedded JavaScript go here -->
