--- a/lab1.html
+++ b/lab1.html
@@ -131,9 +131,37 @@
     <div class="country">
         <img src="images/gb.png" alt="United Kingdom Flag">
         <h2>United Kingdom</h2>
-        <p>Currency: British Pound ( GBP)</p>
+        <p>Currency: British Pound (GBP)</p>
         <p>Region: England, Scotland, Wales, Northern Ireland</p>
         <a href="https://en.wikipedia.org/wiki/Great_Britain" target="_blank">https://en.wikipedia.org/wiki/Great_Britain</a>
+    </div>
+    <div class="country">
+        <img src="images/eg.png" alt="Egypt Flag">
+        <h2>Egypt</h2>
+        <p>Currency: Egyptian Pound (EGP)</p>
+        <p>Region: Cairo, Alexandria, Port Said, Suez, Ismailia, Giza, Dakahlia, Damietta, Sharqia, Qalyubia, Kafr El Sheikh, Gharbia, Monufia, Minya, Asyut, Sohag, Qena, Luxor, Aswan, Red Sea, New Valley, Matrouh, North Sinai, South Sinai, Beheira, Fayoum</p>
+        <a href="https://en.wikipedia.org/wiki/Egypt" target="_blank">https://en.wikipedia.org/wiki/Egypt</a>
+    </div>
+    <div class="country">
+        <img src="images/ru.png" alt="Russia Flag">
+        <h2>Russia</h2>
+        <p>Currency: Russian Ruble (RUB)</p>
+        <p>Region: Adygea, Altai Krai, Altai Republic, Amur Oblast, Arkhangelsk Oblast, Astrakhan Oblast, Bashkortostan, Belgorod Oblast, Bryansk Oblast, Buryatia, Chechnya, Chelyabinsk Oblast, Chukotka Autonomous Okrug, Chuvashia, Dagestan, Ingushetia, Irkutsk Oblast, Ivanovo Oblast, Jewish Autonomous Oblast, Kabardino-Balkaria, Kaliningrad Oblast, Kalmykia, Kaluga Oblast, Kamchatka Krai, Karachay-Cherkessia, Karelia, Kemerovo Oblast, Khabarovsk Krai, Khakassia, Khanty-Mansi Autonomous Okrug, Kirov Oblast, Komi, Kostroma Oblast, Krasnodar Krai, Krasnoyarsk Krai, Kurgan Oblast, Kursk Oblast, Leningrad Oblast, Lipetsk Oblast, Magadan Oblast, Mari El, Mordovia, Moscow, Moscow Oblast, Murmansk Oblast, Nenets Autonomous Okrug, Nizhny Novgorod Oblast, North Ossetia-Alania, Novgorod Oblast, Novosibirsk Oblast, Omsk Oblast, Orel Oblast, Orenburg Oblast, Penza Oblast, Perm Krai, Primorsky Krai, Pskov Oblast, Rostov Oblast, Ryazan Oblast, Sakha (Yakutia), Sakhalin Oblast, Samara Oblast, Saratov Oblast, Smolensk Oblast, Stavropol Krai, Sverdlovsk Oblast, Tambov Oblast, Tatarstan, Tomsk Oblast, Tula Oblast, Tuva, Tver Oblast, Tyumen Oblast, Udmurtia, Ulyanovsk Oblast, Vladimir Oblast, Volgograd Oblast, Vologda Oblast, Voronezh Oblast, Yamalo-Nenets Autonomous Okrug, Yaroslavl Oblast</p>
+        <a href="https://en.wikipedia.org/wiki/Russia" target="_blank">https://en.wikipedia.org/wiki/Russia</a>
+    </div>
+    <div class="country">
+        <img src="images/sg.png" alt="Singapore Flag">
+        <h2>Singapore</h2>
+        <p>Currency: Singapore Dollar (SGD)</p>
+        <p>Region: Ang Mo Kio, Bedok, Bishan, Boon Lay, Bukit Batok, Bukit Merah, Bukit Panjang, Bukit Timah, Central Area, Choa Chu Kang, Clementi, Downtown Core, Geylang, Hougang, Jurong East, Jurong West, Kallang, Lim Chu Kang, Mandai, Marina East, Marina South, Marine Parade, Museum, Newton, North-Eastern Islands, Novena, Orchard, Outram, Pasir Ris, Paya Lebar, Pioneer, Punggol, Queenstown, River Valley, Rochor, Seletar, Sembawang, Sengkang, Serangoon, Singapore River, Southern Islands, Straits View, Sungei Kadut, Tampines, Tanglin, Tengah, Toa Payoh, Tuas, Western Islands, Western Water Catchment, Woodlands, Yishun</p>
+        <a href="https://en.wikipedia.org/wiki/Singapore" target="_blank">https://en.wikipedia.org/wiki/Singapore</a>
+    </div>
+    <div class="country">
+        <img src="images/br.png" alt="Brazil Flag">
+        <h2>Brazil</h2>
+        <p>Currency: Brazilian Real (BRL)</p>
+        <p>Region: Acre, Alagoas, Amapá, Amazonas, Bahia, Ceará, Distrito Federal (Federal District), Espírito Santo, Goiás, Maranhão, Mato Grosso, Mato Grosso do Sul, Minas Gerais, Pará, Paraíba, Paraná, Pernambuco, Piauí, Rio de Janeiro, Rio Grande do Norte, Rio Grande do Sul, Rondônia, Roraima, Santa Catarina, São Paulo, Sergipe, Tocantins</p>
+        <a href="https://en.wikipedia.org/wiki/Brazil" target="_blank">https://en.wikipedia.org/wiki/Brazil</a>
     </div>
 </div>
 <!-- Embedded JavaScript go here -->
