--- a/lab2.html
+++ b/lab2.html
@@ -20,15 +20,15 @@
     </div>
     <div>
         <label for="currencySearch">Search by Currency Code:</label>
-        <input type="text" id="currencySearch" placeholder="Enter currency code" maxlength="3" oninput="convertToUppercase(this)">
+        <input type="text" id="currencySearch" placeholder="Enter currency code" maxlength="3" oninput="this.value = this.value.toUpperCase();">
         <button id="currencySearchBtn">Search</button>
-    </div>
+    </div>    
 </div>
 <div class ="country-list">
     <div class ="country">
         <img src="images/us.png" alt="America Flag">
         <h2>United States of America</h2>
-        <h3>Currency: United States of America</h3>
+        <h3>Currency: United States dollar (USD)</h3>
         <li>Regions: Alabama, Alaska, Arizona, Arkansas, California, Colorado, Connecticut, Delaware, Florida, Georgia, Hawaii, Idaho, Illinois, Indiana, Iowa, Kansas, Kentucky, Louisiana, Maine, Maryland, Massachusetts, Michigan, Minnesota, Mississippi, Missouri, Montana, Nebraska, Nevada, New Hampshire, New Jersey, New Mexico, New York, North Carolina, North Dakota, Ohio, Oklahoma, Oregon, Pennsylvania, Rhode Island, South Carolina, South Dakota, Tennessee, Texas, Utah, Vermont, Virginia, Washington, West Virginia, Wisconsin, Wyoming</li>
         <a href="https://en.wikipedia.org/wiki/United_States" target="_blank">https://en.wikipedia.org/wiki/United_States</a>
     </div>
@@ -49,7 +49,7 @@
     <div class="country">
         <img src="images/in.png" alt="India Flag">
         <h2>India</h2>
-        <li>Currency:Currency: Indian Rupee (INR)</li>
+        <h3>Currency:Currency: Indian Rupee (INR)</h3>
         <li>Region: Andaman and Nicobar Islands, Andhra Pradesh, Arunachal Pradesh, Assam, Bihar, Chandigarh, Chhattisgarh, Dadra and Nagar Haveli, Dadra and Nagar Haveli and Daman and Diu, Delhi, Goa, Gujarat, Haryana, Himachal Pradesh, Jammu and Kashmir, Jharkhand, Karnataka, Kerala, Lakshadweep, Madhya Pradesh, Maharashtra, Manipur, Meghalaya, Mizoram, Nagaland, Odisha, Puducherry, Punjab, Rajasthan, Sikkim, Tamil Nadu, Telangana, Tripura, Uttar Pradesh, Uttarakhand, West Bengal</li>
         <a href="https://en.wikipedia.org/wiki/India" target="_blank">https://en.wikipedia.org/wiki/India</a>
     </div>
@@ -77,7 +77,7 @@
     <div class="country">
         <img src="images/it.png" alt="Italy Flag">
         <h2>Italy</h2>
-        <li>Currency: Euro (EUR)</li>
+        <h3>Currency: Euro (EUR)</h3>
         <li>Region: bruzzo, Aosta Valley (Valle d'Aosta), Apulia (Puglia), Basilicata, Calabria, Campania, Emilia-Romagna, Friuli-Venezia Giulia, Lazio, Liguria, Lombardy (Lombardia), Marche, Molise, Piedmont(Piemonte), Sardinia (Sardegna), Sicily (Sicilia), Trentino-Alto Adige/South Tyrol (Trentino-Alto Adige/Südtirol), Tuscany (Toscana), Umbria, Veneto</li>
         <a href="https://en.wikipedia.org/wiki/Italy" target="_blank">https://en.wikipedia.org/wiki/Italy</a>
     </div>
