--- a/lab2.html
+++ b/lab2.html
@@ -49,7 +49,7 @@
     <div class="country">
         <img src="images/in.png" alt="India Flag">
         <h2>India</h2>
-        <h3>Currency:Currency: Indian Rupee (INR)</h3>
+        <h3>Currency: Indian Rupee (INR)</h3>
         <p>Region: Andaman and Nicobar Islands, Andhra Pradesh, Arunachal Pradesh, Assam, Bihar, Chandigarh, Chhattisgarh, Dadra and Nagar Haveli, Dadra and Nagar Haveli and Daman and Diu, Delhi, Goa, Gujarat, Haryana, Himachal Pradesh, Jammu and Kashmir, Jharkhand, Karnataka, Kerala, Lakshadweep, Madhya Pradesh, Maharashtra, Manipur, Meghalaya, Mizoram, Nagaland, Odisha, Puducherry, Punjab, Rajasthan, Sikkim, Tamil Nadu, Telangana, Tripura, Uttar Pradesh, Uttarakhand, West Bengal</p>
         <a href="https://en.wikipedia.org/wiki/India" target="_blank">https://en.wikipedia.org/wiki/India</a>
     </div>
